--- a/index.html
+++ b/index.html
@@ -45,11 +45,11 @@
 </head>
 <body>
     <div class="container">
-        <h1>Baixe agora meu eBook gratuito!</h1>
-        <img class="ebook-cover" src="ebook-capa.jpg" alt="Capa do eBook">
-        <p>Descubra os segredos para [benefício principal do eBook].</p>
-        <a class="cta-button" href="link-do-ebook.pdf" target="_blank">Baixar Agora</a>
-        <div class="footer">Siga-me nas redes sociais: <a href="#">Instagram</a> | <a href="#">Facebook</a></div>
+        <h1>Adquira agora o E-book</h1>
+        <img class="ebook-cover" src="Capa 20 por 20.png" alt="Capa do eBook">
+        <p>20 passos para perder 20Kg.</p>
+        <a class="cta-button" href="https://pay.kiwify.com.br/Uv0zyjr" target="_blank">Baixar Agora</a>
+        <div class="footer">Dúvidas. Fale com o suporte: <a href="#">suporte20por20@gmail.com</a>
     </div>
 </body>
 </html>
